// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "account": Object {
          "S": "0xAccount",
        },
        "balance": Object {
          "N": "456",
        },
        "createdAt": Object {
          "N": "1234567890",
        },
        "currentSequence": Object {
          "N": "1",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "pair",
        },
        "price": Object {
          "N": "0.12345678",
        },
        "side": Object {
          "S": "bid",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`addRawOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "createdAt": Object {
          "N": "1234567890",
        },
        "exchangeAddress": Object {
          "S": "exchangeAddress",
        },
        "expirationTimeSeconds": Object {
          "S": "1234567890",
        },
        "feeRecipientAddress": Object {
          "S": "feeRecipientAddress",
        },
        "makerAddress": Object {
          "S": "makerAddress",
        },
        "makerAssetAmount": Object {
          "S": "123",
        },
        "makerAssetData": Object {
          "S": "makerAssetData",
        },
        "makerFee": Object {
          "S": "0",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "salt": Object {
          "S": "789",
        },
        "senderAddress": Object {
          "S": "senderAddress",
        },
        "signature": Object {
          "S": "signature",
        },
        "takerAddress": Object {
          "S": "takerAddress",
        },
        "takerAssetAmount": Object {
          "S": "456",
        },
        "takerAssetData": Object {
          "S": "takerAssetData",
        },
        "takerFee": Object {
          "S": "0",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.rawOrders.dev",
    },
  ],
]
`;

exports[`addUserOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "accountYearMonth": Object {
          "S": "0xAccount|1970-01",
        },
        "balance": Object {
          "N": "456",
        },
        "createdAt": Object {
          "N": "1234560000",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "pairOrderHashSequence": Object {
          "S": "pair|0xOrderHash|2",
        },
        "price": Object {
          "N": "0.12345678",
        },
        "side": Object {
          "S": "side",
        },
        "status": Object {
          "S": "status",
        },
        "type": Object {
          "S": "type",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "updatedBy": Object {
          "S": "updatedBy",
        },
      },
      "TableName": "israfel.userOrders.dev",
    },
  ],
]
`;

exports[`deleteLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "pair",
        },
      },
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`deleteRawOrderSignature 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeNames": Object {
        "signature": "signature",
        "updatedAt": "updatedAt",
      },
      "ExpressionAttributeValues": Object {
        ":signature": Object {
          "S": "",
        },
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "TableName": "israfel.rawOrders.dev",
      "UpdateExpression": "SET signature = :signature, updatedAt = :updatedAt",
    },
  ],
]
`;

exports[`getLiveOrders 1`] = `Array []`;

exports[`getLiveOrders 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":pair": Object {
          "S": "pair",
        },
      },
      "KeyConditionExpression": "pair = :pair",
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`getLiveOrders 3`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "pair",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 1`] = `Array []`;

exports[`getLiveOrders with orderHash 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "orderHash",
        },
        ":pair": Object {
          "S": "pair",
        },
      },
      "KeyConditionExpression": "pair = :pair AND orderHash = :orderHash",
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`getLiveOrders with orderHash 3`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "pair",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 4`] = `[Error: multiple record for order hash orderHash]`;

exports[`getRawOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "KeyConditionExpression": "orderHash = :orderHash",
      "TableName": "israfel.rawOrders.dev",
    },
  ],
]
`;

exports[`getRawOrder 2`] = `
Object {
  "createdAt": 1234567890,
  "orderHash": "0xOrderHash",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
  "updatedAt": 1234567890,
}
`;

exports[`getRawOrder 3`] = `[Error: multiple record for order hash 0xOrderHash]`;

exports[`getServices 1`] = `Array []`;

exports[`getServices 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":hostname": Object {
          "S": "hostname",
        },
        ":service": Object {
          "S": "service",
        },
      },
      "KeyConditionExpression": "service = :service AND hostname = :hostname",
      "TableName": "israfel.services.dev",
    },
  ],
]
`;

exports[`getServices 3`] = `
Array [
  Object {
    "hostname": "hostname1",
    "service": "service",
    "url": "url1",
  },
  Object {
    "hostname": "hostname2",
    "service": "service",
    "url": "",
  },
]
`;

exports[`getServices 4`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":service": Object {
          "S": "service",
        },
      },
      "KeyConditionExpression": "service = :service",
      "TableName": "israfel.services.dev",
    },
  ],
]
`;

exports[`getUserOrders 1`] = `
Array [
  Array [
    "0xAccount",
    "1970-01",
    "",
  ],
  Array [
    "0xAccount",
    "1970-02",
    "",
  ],
  Array [
    "0xAccount",
    "1970-03",
    "",
  ],
  Array [
    "0xAccount",
    "1970-04",
    "",
  ],
]
`;

exports[`getUserOrdersForMonth 1`] = `Array []`;

exports[`getUserOrdersForMonth 2`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "createdAt": 1234560000,
    "currentSequence": 1,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "pair",
    "price": 123,
    "side": "side",
    "status": "status",
    "type": "type",
    "updatedAt": 1234567890,
    "updatedBy": "updatedBy",
  },
]
`;

exports[`getUserOrdersForMonth 3`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":accountYearMonth": Object {
          "S": "0xAccount|1234-56",
        },
        ":end": Object {
          "S": "pair|z",
        },
        ":start": Object {
          "S": "pair|",
        },
      },
      "KeyConditionExpression": "accountYearMonth = :accountYearMonth AND pairOrderHashSequence BETWEEN :start AND :end",
      "TableName": "israfel.userOrders.dev",
    },
  ],
]
`;

exports[`scanServices 1`] = `Array []`;

exports[`scanServices 2`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.services.dev",
    },
  ],
]
`;

exports[`scanServices 3`] = `
Array [
  Object {
    "hostname": "hostname1",
    "service": "service1",
    "url": "url1",
  },
  Object {
    "hostname": "hostname2",
    "service": "service2",
    "url": "",
  },
]
`;

exports[`scanStatus 1`] = `Array []`;

exports[`scanStatus 2`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.status.dev",
    },
  ],
]
`;

exports[`scanStatus 3`] = `
Array [
  Object {
    "count": 123,
    "hostname": "hostname",
    "pair": "pair",
    "sequence": 456,
    "tool": "tool",
    "updatedAt": 1234567890,
  },
  Object {
    "hostname": "hostname",
    "pair": "",
    "tool": "tool",
    "updatedAt": 1234567890,
  },
]
`;

exports[`updateLiveOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeNames": Object {
        "balance": "balance",
        "currentSequence": "currentSequence",
        "updatedAt": "updatedAt",
      },
      "ExpressionAttributeValues": Object {
        ":balance": Object {
          "N": "456",
        },
        ":currentSequence": Object {
          "N": "2",
        },
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "pair",
        },
      },
      "TableName": "israfel.liveOrders.dev",
      "UpdateExpression": "SET balance = :balance, updatedAt = :updatedAt, currentSequence = :currentSequence ",
    },
  ],
]
`;

exports[`updateStatus 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.status.dev",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "count": Object {
          "N": "123",
        },
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.status.dev",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "count": Object {
          "N": "123",
        },
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "sequence": Object {
          "N": "456",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.status.dev",
    },
  ],
]
`;
